# Banbu-home-agent

./: .env.example  .gitignore  README.md  pyproject.toml
banbu/: dispatcher.py  main.py
banbu/adapters/: iot_client.py
banbu/agent/: loop.py  prompts.py  tools.py
banbu/audit/: log.py
banbu/cli/: probe.py  reactive.py
banbu/config/: devices.yaml.example  policy.yaml  settings.py
banbu/context/: assembler.py  pilot.py  selector.py
banbu/control/: executor.py  plane.py
banbu/devices/: definition.py  registry.py  resolver.py
banbu/im/: __init__.py  feishu_adapter.py  feishu_service.py  reply.py  router.py  types.py  weixin_adapter.py
banbu/ingest/: event.py  normalizer.py  poller.py  webhook.py
banbu/policy/: __init__.py  access.py
banbu/reactive/: __init__.py  agent_runner.py  matcher.py  prompts.py  protocol.py  runner.py  scene_matcher.py
banbu/scenes/: definition.py  loader.py  reverse_index.py
banbu/state/: feedback.py  snapshot_cache.py
banbu/turn/: builder.py  model.py  scheduler.py
banbu/vision/: __init__.py  detector.py  publisher.py  rtsp_monitor.py  service.py
docs/: agent-architecture-design.md  im-channel-integration.md  implementation-plan.md  vision-active-trigger-design.md  实时视频检测算法优化.md  实时视频流检测算法说明.md
docs/paper/: VisPco.md  Vispco-u.md
scripts/: trigger_entry_light.sh  trigger_gas_smoke_alarm.sh  trigger_hand_on_cheek_vision.sh
tests/: test_dispatcher_priority.py  test_feedback_outcome.py
tests/agent/: test_loop.py  test_loop_tool_calls.py
tests/context/: test_assembler.py  test_assembler_blocks.py  (+1 more)
(+47 files in other folders)
